--- a/index.html
+++ b/index.html
@@ -64,10 +64,13 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				
+
 			</div>
 		</main>
 
-		<p>Esto es una prueba</p>
+		<footer class="footer">
+			Creado por @MaxiAuxiliar
+		</footer>
+
 	</body>
 </html>
