--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<header class="header">
 
-			<div class="container">
+			<div class="container logo-nav-container">
 				
 				<a href="#" class="logo">LOGO</a>
 				<nav class="navigation">
