--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" type="text/css" href="style.css">
+
+
 	</head>
 	<body>
 
@@ -15,6 +17,7 @@
 			<div class="container logo-nav-container">
 				
 				<a href="#" class="logo">LOGO</a>
+				<span class="menu-icon">Ver menú</span>
 				<nav class="navigation">
 					<ul>
 						<li><a href="#">Inicio</a></li>
@@ -73,6 +76,9 @@
 		<footer class="footer">
 			Creado por @MaxiAuxiliar
 		</footer>
+
+		<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+		<script src="scripts.js"></script>
 
 	</body>
 </html>
